fix(global): remove z-indexes from portal components

--- a/packages/react/src/styles/global.css
+++ b/packages/react/src/styles/global.css
@@ -427,10 +427,6 @@
 	body {
 		@apply bg-background text-foreground relative;
 	}
-
-	.root {
-		@apply isolate;
-	}
 }
 
 @layer base {
